--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,14 @@ pymongo[srv]
 huggingface_hub
 fastapi
 uvicorn
+Flask==2.3.4
+flask-cors==3.1.13
+flask-mail==0.9.1
+fastapi==0.103.1
+uvicorn==0.23.2
+reportlab==4.0.5
+pymongo==4.3.3
+werkzeug==2.3.7
+python-dotenv==1.0.1
+requests==2.32.1
+numpy==1.27.6
