--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,12 @@
-flask
-flask-cors
-flask-mail
-python-dotenv
-pymongo
-google-search-results
-joblib
-numpy
-pandas
-scikit-learn==1.6.1
-pickle-mixin==1.0.2
-setuptools
-wheel
-gdown
-pymongo==4.6.3
-dnspython==2.4.2
-pymongo[srv]
-huggingface_hub
-fastapi
-uvicorn
 Flask==2.3.4
 flask-cors==3.1.13
 flask-mail==0.9.1
-fastapi==0.103.1
-uvicorn==0.23.2
+fastapi==0.117.1
+uvicorn==0.37.0
 reportlab==4.0.5
 pymongo==4.3.3
 werkzeug==2.3.7
 python-dotenv==1.0.1
 requests==2.32.1
 numpy==1.27.6
+huggingface_hub==0.35.1
